--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,9 +31,9 @@ jobs:
             ~/.go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
 
-      - name: Setup envtest
-        run: make setup-envtest
-        working-directory: ${{ matrix.subproject }}
+      # - name: Setup envtest
+      #   run: make setup-envtest
+      #   working-directory: ${{ matrix.subproject }}
 
       - name: Run tests
         run: make test
