--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,7 +10,7 @@ jobs:
     name: Run unit tests
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: true
+      fail-fast: false # run all tests even if one fails
       matrix:
         subproject: ["common", "common-server", "secret-manager", "gateway", "identity"]
     permissions:
@@ -38,3 +38,5 @@ jobs:
       - name: Run tests
         run: make test
         working-directory: ${{ matrix.subproject }}
+        env:
+          ENVTEST_K8S_VERSION: "1.31.0"
