--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false # run all tests even if one fails
       matrix:
-        subproject: ["common", "common-server", "secret-manager", "gateway", "identity"]
+        subproject: ${{ steps.subprojects.outputs.subprojects }}
     permissions:
       pull-requests: write
       checks: write
@@ -23,6 +23,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Determine subprojects
+        id: subprojects
+        run: |
+          echo "subprojects=$(find . -maxdepth 3 -type f -name Makefile | cut -f2 -d/ | tr '\n' ' ')" >> $GITHUB_ENV
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
@@ -34,28 +38,27 @@ jobs:
             ~/.go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
 
-      # - name: Setup envtest
-      #   run: make setup-envtest
-      #   working-directory: ${{ matrix.subproject }}
-
       - name: Run tests
         run: make test
         working-directory: ${{ matrix.subproject }}
         env:
           ENVTEST_K8S_VERSION: "1.31.0"
-
-
+          
   build-operators:
     name: Build operators
     runs-on: ubuntu-latest
     needs: [ test ]
     strategy:
-      fail-fast: false # run all tests even if one fails
+      fail-fast: false
       matrix:
-        subproject: ["gateway", "identity"]
+        operator: ${{ steps.operators.outputs.operators }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Determine operators
+        id: operators
+        run: |
+          echo "operators=$(find . -maxdepth 3 -type f -name main.go | cut -f2 -d/ | tr '\n' ' ')" >> $GITHUB_ENV
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
@@ -70,9 +73,9 @@ jobs:
       - uses: ko-build/setup-ko@v0.8
       - name: Inject slug vars
         uses: rlespinasse/github-slug-action@v5
-      - run: ko build ${{ matrix.subproject }}/cmd/main.go --bare --tags ${GITHUB_REF_SLUG}
+      - run: ko build ${{ matrix.operator }}/cmd/main.go --bare --tags ${GITHUB_REF_SLUG}
         env:
-          KO_DOCKER_REPO: ghcr.io/telekom/controlplane-mono/${{ matrix.subproject }}
+          KO_DOCKER_REPO: ghcr.io/telekom/controlplane-mono/${{ matrix.operator }}
 
 
 # TODO: build other subprojects
