--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,8 +21,10 @@ jobs:
       - name: Build Matrix
         id: text
         run: |
-          echo "subprojects=$(find . -maxdepth 3 -type f -name Makefile | cut -f2 -d/ | tr '\n' ' ')" >> $GITHUB_OUTPUT
-          echo "operators=$(find . -maxdepth 3 -type f -name main.go | cut -f2 -d/ | tr '\n' ' ')" >> $GITHUB_OUTPUT
+          subprojects=$(find . -maxdepth 3 -type f -name Makefile | cut -f2 -d/ | jq -R -s -c 'split("\n") | map(select(length > 0))')
+          operators=$(find . -maxdepth 3 -type f -name main.go | cut -f2 -d/ | jq -R -s -c 'split("\n") | map(select(length > 0))')
+          echo "subprojects=$subprojects" >> $GITHUB_OUTPUT
+          echo "operators=$operators" >> $GITHUB_OUTPUT
 
   test:
     name: Run unit tests
@@ -31,7 +33,7 @@ jobs:
     strategy:
       fail-fast: false # run all tests even if one fails
       matrix:
-        subproject: ${{ needs.prepare.outputs.subprojects }}
+        subproject: ${{ fromJson(needs.prepare.outputs.subprojects) }}
     permissions:
       pull-requests: write
       checks: write
@@ -63,7 +65,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        operator: ${{ needs.prepare.outputs.operators }}
+        operator: ${{ fromJson(needs.prepare.outputs.operators) }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
