ci: update branches for go-build-test

--- a/.github/workflows/go-build.test.yaml
+++ b/.github/workflows/go-build.test.yaml
@@ -4,7 +4,9 @@ on:
     branches:
       - "main"
       - "feature-**"
+      - "feat-**"
       - "release-**"
+      - "dependabot-**"
   pull_request:
     branches:
       - "main"
