--- a/.github/workflows/go-build.test.yaml
+++ b/.github/workflows/go-build.test.yaml
@@ -3,10 +3,10 @@ on:
   push:
     branches:
       - "main"
-      - "feature-**"
-      - "feat-**"
-      - "release-**"
-      - "dependabot-**"
+      - "feature/**"
+      - "feat/**"
+      - "release/**"
+      - "dependabot/**"
   pull_request:
     branches:
       - "main"
