--- a/.github/workflows/go-build.test.yaml
+++ b/.github/workflows/go-build.test.yaml
@@ -51,6 +51,6 @@ jobs:
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # pin@v4.6.2
         if: always()
         with:
-          name: test-log
+          name: test-log-${{ matrix.subproject }}
           path: /tmp/gotest.log
           if-no-files-found: error
