ci: added grouping to depndabot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,3 +16,8 @@ updates:
       - identity
       - gateway
       - secret-manager
+    groups:
+      default: 
+        update-types:
+          - patch
+          - minor
