--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,15 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Go
         uses: actions/setup-go@v5
+      - name: Detect Changes
+        uses: ron96G/monutil@v1
+        with:
+          base-commit: ${{ github.event_name == 'pull_request' && github.event.pull_request.base.sha || github.event_name == 'push' && github.event.before }}
+          head-commit: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.event_name == 'push' && github.sha }}
+      - name: Print changed modules
+        run: |
+          echo "Changed modules output:"
+          echo "${{ steps.run_my_action.outputs.changed-modules }}"
       - name: Build Matrix
         id: matrix
         run: |
