ci(ko): fixed build path

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,11 +1,10 @@
 name: Go CI
 
 # todo: add more rules
-on:      
+on:
   push:
 
 jobs:
-
   prepare:
     runs-on: ubuntu-latest
     outputs:
@@ -17,7 +16,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
       - name: Detect Changes
-        uses: ron96G/monutil@v1.1.1
+        uses: ron96G/monutil@v1.1.2
         with:
           base-commit: ${{ github.event_name == 'pull_request' && github.event.pull_request.base.sha || github.event_name == 'push' && github.event.before }}
           head-commit: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.event_name == 'push' && github.sha }}
@@ -75,7 +74,7 @@ jobs:
           name: test-log-${{ matrix.subproject }}
           path: /tmp/gotest.log
           if-no-files-found: error
-          
+
   build-operators:
     name: Build operators
     runs-on: ubuntu-latest
@@ -101,10 +100,8 @@ jobs:
       - uses: ko-build/setup-ko@v0.8
       - name: Inject slug vars
         uses: rlespinasse/github-slug-action@v5
-      - run: ko build ${{ matrix.subproject }}/cmd/main.go --bare --tags ${GITHUB_REF_SLUG}
+      - run: ko build cmd/main.go --bare --tags ${GITHUB_REF_SLUG}
         env:
           KO_DOCKER_REPO: ghcr.io/telekom/controlplane-mono/${{ matrix.subproject }}
         working-directory: ${{ matrix.subproject }}
-
-
 # TODO: build other subprojects
