--- a/.github/workflows/govulncheck.yml
+++ b/.github/workflows/govulncheck.yml
@@ -2,24 +2,51 @@ name: govulncheck
 on:
   push:
     paths:
-      - go.sum
+      - 'common/go.sum'
+      - 'common-server/go.sum'
+      - 'secret-manager/go.sum'
+      - 'gateway/go.sum'
+      - 'identity/go.sum'
   schedule:
     - cron: "0 0 * * *"
 
 permissions: read-all
 
 jobs:
+  prepare:
+    runs-on: ubuntu-latest
+    outputs:
+      subprojects: ${{ steps.matrix.outputs.subprojects }}
+      operators: ${{ steps.matrix.outputs.operators }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # pin@v4.2.2
+      - name: Setup Go
+        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # pin@5.5.0
+      - name: Build Matrix
+        id: matrix
+        run: |
+          subprojects=$(find . -maxdepth 3 -type f -name Makefile | cut -f2 -d/ | jq -R -s -c 'split("\n") | map(select(length > 0))')
+          operators=$(find . -maxdepth 3 -type f -name main.go | cut -f2 -d/ | jq -R -s -c 'split("\n") | map(select(length > 0))')
+          echo "subprojects=$subprojects" >> $GITHUB_OUTPUT
+          echo "operators=$operators" >> $GITHUB_OUTPUT
+
   govulncheck:
     name: govulncheck
     runs-on: ubuntu-latest
+    needs: prepare
+    strategy:
+      fail-fast: false # run all tests even if one fails
+      matrix:
+        subproject: ${{ fromJson(needs.prepare.outputs.subprojects) }}
     steps:
       - name: Setup Go
         uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # pin@5.5.0
         with:
-          go-version: stable
+          go-version-file: ${{ matrix.subproject }}/go.mod
       - name: govulncheck
         uses: golang/govulncheck-action@b625fbe08f3bccbe446d94fbf87fcc875a4f50ee # pin@1.0.4
         with:
           go-version-input: '' # default is 'stable' which overrides the file input
-          go-version-file: go.mod
+          go-version-file: ${{ matrix.subproject }}/go.mod
           go-package: ./...
