feat(ci): Add workflow_dispatch to allow starting ci and govulncheck manually

--- a/.github/workflows/govulncheck.yml
+++ b/.github/workflows/govulncheck.yml
@@ -7,6 +7,7 @@ on:
       - 'secret-manager/go.sum'
       - 'gateway/go.sum'
       - 'identity/go.sum'
+  workflow_dispatch:
   schedule:
     - cron: "0 0 * * *"
 
