--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,6 +14,7 @@ on:
       - 'secret-manager/**'
       - 'gateway/**'
       - 'identity/**'
+  workflow_dispatch:
   pull_request:
     branches:
       - "main"
