feat(ci): Run check jobs also on feat/ci branch (testing only)

--- a/.github/workflows/govulncheck.yml
+++ b/.github/workflows/govulncheck.yml
@@ -2,6 +2,8 @@ name: govulncheck
 on:
   workflow_dispatch:
   push:
+    branches:
+      - "feat/ci" #TODO Remove before PR - only for testing
     paths:
       - 'common/go.sum'
       - 'common-server/go.sum'
