Revert "feat(ci): Run check jobs also on feat/ci branch (testing only)"
This reverts commit 9146f65de95fb1e64e167eb30b65991094510d58.

--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -12,9 +12,7 @@ on:
   schedule:
     - cron: '42 1 * * 1'
   push:
-    branches:
-      - "main"
-      - "feat/ci" #TODO Remove before PR - only for testing
+    branches: [ "main" ]
 
 # Declare default permissions as read only.
 permissions: read-all
