ci(ort): fixing exclusion paths

--- a/.github/ort/config.yml
+++ b/.github/ort/config.yml
@@ -38,18 +38,18 @@ ort:
     - pattern: "test-data/**"
       reason: "TEST_OF"
       comment: "This directory contains test data which are not distributed."
-    - pattern: "**/CONTRIBUTING.md"
+    - pattern: "CONTRIBUTING.md"
       reason: DOCUMENTATION_OF
       comment: "This file contains contribution guidelines which are not distributed."
-    - pattern: "**/README.md"
+    - pattern: "README.md"
       reason: DOCUMENTATION_OF
       comment: "This file contains project description which is not distributed."
     - pattern: ".github/**"
       reason: "BUILD_TOOL_OF"
       comment: "This directory contains GitHub Actions workflows which are not distributed."
-    - pattern: "**/*_test.go"
+    - pattern: "*_test.go"
       reason: "TEST_OF"
       comment: "This file contains test code which is not distributed."
-    - pattern: "**/test_*.go"
+    - pattern: "test_*.go"
       reason: "TEST_OF"
       comment: "This file contains test code which is not distributed."
