--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -20,38 +20,13 @@ on:
   schedule:
     - cron: '44 16 * * 2'
 
+env:
+  COMPONENTS: '["common","common-server","secret-manager","gateway","identity"]'
+
 jobs:
-  prepare:
-    runs-on: ubuntu-latest
-    outputs:
-      subprojects: ${{ steps.matrix.outputs.subprojects }}
-      operators: ${{ steps.matrix.outputs.operators }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # pin@v4.2.2
-      - name: Setup Go
-        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # pin@5.5.0
-      - name: Detect Changes
-        id: detect-changes
-        uses: ron96G/monutil@v1.1.2
-        with:
-          base-commit: ${{ github.event_name == 'pull_request' && github.event.pull_request.base.sha || github.event_name == 'push' && github.event.before }}
-          head-commit: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.event_name == 'push' && github.sha }}
-      - name: Print changed modules
-        run: |
-          echo "Changed modules output:"
-          echo "${{ steps.detect-changes.outputs.changed-modules }}"
-      - name: Build Matrix
-        id: matrix
-        run: |
-          subprojects=$(find . -maxdepth 3 -type f -name Makefile | cut -f2 -d/ | jq -R -s -c 'split("\n") | map(select(length > 0))')
-          operators=$(find . -maxdepth 3 -type f -name main.go | cut -f2 -d/ | jq -R -s -c 'split("\n") | map(select(length > 0))')
-          echo "subprojects=$subprojects" >> $GITHUB_OUTPUT
-          echo "operators=$operators" >> $GITHUB_OUTPUT
 
   analyze:
     name: Analyze (${{ matrix.language }})
-    needs: prepare
     # Runner size impacts CodeQL analysis time. To learn more, please see:
     #   - https://gh.io/recommended-hardware-resources-for-running-codeql
     #   - https://gh.io/supported-runners-and-hardware-resources
@@ -75,7 +50,7 @@ jobs:
         include:
         - language: go
           build-mode: manual
-          subproject: ${{ fromJson(needs.prepare.outputs.subprojects) }}
+          module: ${{ fromJson(env.MODULES) }}
         # CodeQL supports the following values keywords for 'language': 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'swift'
         # Use `c-cpp` to analyze code written in C, C++ or both
         # Use 'java-kotlin' to analyze code written in Java, Kotlin or both
@@ -115,7 +90,7 @@ jobs:
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
     - if: matrix.build-mode == 'manual'
       shell: bash
-      working-directory: ${{ matrix.subproject }}
+      working-directory: ${{ matrix.module }}
       run: |
         make build
 
