--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,6 +1,7 @@
 name: golangci-lint
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - "feat/ci" #TODO Remove before PR - only for testing
@@ -19,6 +20,7 @@ permissions:
 env:
   GO_VERSION: stable
   GOLANGCI_LINT_VERSION: v2.1
+  COMPONENTS: '["common","common-server","secret-manager","gateway","identity"]'
 
 jobs:
   golangci:
@@ -27,12 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        component:
-          - common
-          - common-server
-          - secret-manager
-          - gateway
-          - identity
+        module: ${{ fromJson(env.MODULES) }}
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # pin@v4.2.2
@@ -45,4 +42,4 @@ jobs:
         uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9 #pin@8.0.0
         with:
           version: ${{ env.GOLANGCI_LINT_VERSION }}
-          working-directory: ${{ matrix.component }}
+          working-directory: ${{ matrix.module }}
