--- a/.github/workflows/govulncheck.yml
+++ b/.github/workflows/govulncheck.yml
@@ -1,4 +1,5 @@
 name: govulncheck
+
 on:
   workflow_dispatch:
   push:
@@ -11,43 +12,29 @@ on:
   schedule:
     - cron: "0 0 * * *"
 
-permissions: read-all
+permissions:
+  # Required: allow read access to the content for analysis.
+  read-all
+
+env:
+  MODULES: '["common","common-server","secret-manager","gateway","identity"]'
 
 jobs:
-  prepare:
-    runs-on: ubuntu-latest
-    outputs:
-      subprojects: ${{ steps.matrix.outputs.subprojects }}
-      operators: ${{ steps.matrix.outputs.operators }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # pin@v4.2.2
-      - name: Setup Go
-        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # pin@5.5.0
-      - name: Build Matrix
-        id: matrix
-        run: |
-          subprojects=$(find . -maxdepth 3 -type f -name Makefile | cut -f2 -d/ | jq -R -s -c 'split("\n") | map(select(length > 0))')
-          operators=$(find . -maxdepth 3 -type f -name main.go | cut -f2 -d/ | jq -R -s -c 'split("\n") | map(select(length > 0))')
-          echo "subprojects=$subprojects" >> $GITHUB_OUTPUT
-          echo "operators=$operators" >> $GITHUB_OUTPUT
-
   govulncheck:
     name: govulncheck
     runs-on: ubuntu-latest
-    needs: prepare
     strategy:
       fail-fast: false # run all tests even if one fails
       matrix:
-        subproject: ${{ fromJson(needs.prepare.outputs.subprojects) }}
+        module: ${{ fromJson(env.MODULES) }}
     steps:
       - name: Setup Go
         uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # pin@5.5.0
         with:
-          go-version-file: ${{ matrix.subproject }}/go.mod
+          go-version-file: ${{ matrix.module }}/go.mod
       - name: govulncheck
         uses: golang/govulncheck-action@b625fbe08f3bccbe446d94fbf87fcc875a4f50ee # pin@1.0.4
         with:
           go-version-input: '' # default is 'stable' which overrides the file input
-          go-version-file: ${{ matrix.subproject }}/go.mod
+          go-version-file: ${{ matrix.module }}/go.mod
           go-package: ./...
