--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -21,7 +21,7 @@ on:
     - cron: '44 16 * * 2'
 
 env:
-  COMPONENTS: '["common","common-server","secret-manager","gateway","identity"]'
+  MODULES: '["common","common-server","secret-manager","gateway","identity"]'
 
 jobs:
 
