--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -20,9 +20,6 @@ on:
   schedule:
     - cron: '44 16 * * 2'
 
-env:
-  MODULES: '["common","common-server","secret-manager","gateway","identity"]'
-
 jobs:
 
   analyze:
@@ -50,7 +47,12 @@ jobs:
         include:
         - language: go
           build-mode: manual
-          module: ${{ fromJson(env.MODULES) }}
+          module:
+            - common
+            - common-server
+            - secret-manager
+            - gateway
+            - identity
         # CodeQL supports the following values keywords for 'language': 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'swift'
         # Use `c-cpp` to analyze code written in C, C++ or both
         # Use 'java-kotlin' to analyze code written in Java, Kotlin or both
