--- a/.github/workflows/govulncheck.yml
+++ b/.github/workflows/govulncheck.yml
@@ -16,9 +16,6 @@ permissions:
   # Required: allow read access to the content for analysis.
   read-all
 
-env:
-  MODULES: '["common","common-server","secret-manager","gateway","identity"]'
-
 jobs:
   govulncheck:
     name: govulncheck
@@ -26,7 +23,12 @@ jobs:
     strategy:
       fail-fast: false # run all tests even if one fails
       matrix:
-        module: ${{ fromJson(env.MODULES) }}
+        module:
+          - common
+          - common-server
+          - secret-manager
+          - gateway
+          - identity
     steps:
       - name: Setup Go
         uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # pin@5.5.0
