feat(ci): Add check-generated-changes and add coverage reports for test

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,6 +49,35 @@ jobs:
           echo "subprojects=$subprojects" >> $GITHUB_OUTPUT
           echo "operators=$operators" >> $GITHUB_OUTPUT
 
+  check-generated-changes:
+    name: Check generated code is up-to-date
+    runs-on: ubuntu-latest
+    needs: prepare
+    strategy:
+      fail-fast: false # run all tests even if one fails
+      matrix:
+        subproject: ${{ fromJson(needs.prepare.outputs.subprojects) }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # pin@v4.2.2
+      - name: Restore Go cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/.go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+      - name: Generate manifests
+        run: make manifests
+        working-directory: ${{ matrix.subproject }}
+      - name: Generate boilerplate
+        run: make generate
+        working-directory: ${{ matrix.subproject }}
+      - name: Ensure nothing has changed
+        run: git diff --exit-code -- . ':!go.sum' ':!go.mod'
+        working-directory: ${{ matrix.subproject }}
+
+
   test:
     name: Run unit tests
     runs-on: ubuntu-latest
@@ -84,6 +113,16 @@ jobs:
         env:
           ENVTEST_K8S_VERSION: "1.31.0"
 
+      - name: Generate HTML coverage report
+        run: go tool cover -html=cover.profile -o coverage.html
+        working-directory: ${{ matrix.subproject }}
+
+      - name: Generate Cobertura coverage report
+        run: |
+            go install github.com/boumenot/gocover-cobertura@latest
+            gocover-cobertura < cover.profile > cobertura.xml
+        working-directory: ${{ matrix.subproject }}
+
       - name: Upload test log
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # pin@v4.6.2
         if: always()
@@ -91,6 +130,48 @@ jobs:
           name: test-log-${{ matrix.subproject }}
           path: /tmp/gotest.log
           if-no-files-found: error
+
+      - id: upload-results
+        name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-report
+          path: |
+            ./cover.profile
+            ./coverage.html
+            ./cobertura.xml
+            ./junit.xml
+      - name: Publish test report
+        uses: mikepenz/action-junit-report@v5
+        if: always() && github.event_name == 'pull_request'
+        with:
+          report_paths: './junit.xml'
+          check_name: Test Report
+          comment: true
+          include_passed: true
+      - name: Prepare coverage comment
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        if: always() && github.event_name == 'pull_request'
+        with:
+          filename: ./cobertura.xml
+          badge: true
+          fail_below_min: true
+          format: markdown
+          indicators: true
+          output: both
+          thresholds: '60 80'
+      - name: Append coverage comment
+        if: always() && github.event_name == 'pull_request'
+        run: |
+          sudo chown $(whoami) code-coverage-results.md
+          printf "\nDownload the latest HTML coverage report [here](${{ steps.upload-results.outputs.artifact-url }})." >> code-coverage-results.md
+      - name: Add Coverage PR Comment
+        uses: marocchino/sticky-pull-request-comment@v2
+        if: always() && github.event_name == 'pull_request'
+        with:
+          recreate: true
+          path: code-coverage-results.md
           
   build-operators:
     name: Build operators
