--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -177,6 +177,9 @@ jobs:
     name: Build operators
     runs-on: ubuntu-latest
     needs: [prepare, test]
+    outputs:
+      image-digest: ${{ steps.build-operators.outputs.digest }}
+      image-tag: ${{ steps.build-operators.outputs.image-digest }}
     strategy:
       fail-fast: false
       matrix:
@@ -198,7 +201,11 @@ jobs:
       - uses: ko-build/setup-ko@v0.8
       - name: Inject slug vars
         uses: rlespinasse/github-slug-action@v5
-      - run: ko build cmd/main.go --bare --tags ${GITHUB_REF_SLUG}
+      - run: |
+          output=$(ko build cmd/main.go --bare --tags ${GITHUB_REF_SLUG})
+          echo "$output"
+          digest=$(echo "$output" | grep -o 'sha256:[a-f0-9]\{64\}')
+          echo "digest=$digest" >> $GITHUB_OUTPUT
         env:
           KO_DOCKER_REPO: ghcr.io/telekom/controlplane-mono/${{ matrix.subproject }}
         working-directory: ${{ matrix.subproject }}
