--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,7 +56,7 @@ jobs:
     strategy:
       fail-fast: false # run all tests even if one fails
       matrix:
-        subproject: ${{ fromJson(needs.prepare.outputs.subprojects) }}
+        subproject: ${{ fromJson(needs.prepare.outputs.operators) }}
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # pin@v4.2.2
