feat(ci): gotest.log will be written into module dir

--- a/secret-manager/Makefile
+++ b/secret-manager/Makefile
@@ -17,4 +17,4 @@ build: fmt vet ## Run go build against code.
 
 .PHONY: test
 test: fmt vet ## Run tests.
-	go test $$(go list ./... | grep -v /test |grep -v /internal/api) -coverprofile cover.out -mod=readonly -race -json 2>&1 | tee /tmp/gotest.log | gotestfmt
+	go test $$(go list ./... | grep -v /test |grep -v /internal/api) -coverprofile cover.out -mod=readonly -race -json 2>&1 | tee gotest.log | gotestfmt
