--- a/identity/Makefile
+++ b/identity/Makefile
@@ -65,7 +65,7 @@ COVER_PACKAGES=./internal/...,./pkg/keycloak/...
 
 .PHONY: test
 test: manifests generate fmt vet envtest ## Run tests.
-	KUBEBUILDER_ASSETS="$(shell $(ENVTEST) use $(ENVTEST_K8S_VERSION) --bin-dir $(LOCALBIN) -p path)" go test $(TEST_PACKAGES) -coverprofile cover.out --coverpkg $(COVER_PACKAGES) -json 2>&1 | tee /tmp/gotest.log | gotestfmt
+	KUBEBUILDER_ASSETS="$(shell $(ENVTEST) use $(ENVTEST_K8S_VERSION) --bin-dir $(LOCALBIN) -p path)" go test $(TEST_PACKAGES) -coverprofile cover.out --coverpkg $(COVER_PACKAGES) -json 2>&1 | tee gotest.log | gotestfmt
 
 # Utilize Kind or modify the e2e tests to load the image locally, enabling compatibility with other vendors.
 .PHONY: test-e2e  # Run the e2e tests against a Kind k8s instance that is spun up.
