--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -127,8 +127,8 @@ jobs:
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # pin@v4.6.2
         if: always()
         with:
-          name: test-log-${{ matrix.subproject }}
-          path: /tmp/gotest.log
+          name: ${{ matrix.subproject }}-gotest.log
+          path: ${{ matrix.subproject }}/gotest.log
           if-no-files-found: error
 
       - id: upload-results
@@ -136,17 +136,17 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: test-report
+          name: ${{ matrix.subproject }}-test-report
           path: |
-            ./cover.out
-            ./coverage.html
-            ./cobertura.xml
-            ./junit.xml
+            ${{ matrix.subproject }}/cover.out
+            ${{ matrix.subproject }}/coverage.html
+            ${{ matrix.subproject }}/cobertura.xml
+            ${{ matrix.subproject }}/junit.xml
       - name: Publish test report
         uses: mikepenz/action-junit-report@v5
         if: always() && github.event_name == 'pull_request'
         with:
-          report_paths: './junit.xml'
+          report_paths: '${{ matrix.subproject }}/junit.xml'
           check_name: Test Report
           comment: true
           include_passed: true
@@ -154,7 +154,7 @@ jobs:
         uses: irongut/CodeCoverageSummary@v1.3.0
         if: always() && github.event_name == 'pull_request'
         with:
-          filename: ./cobertura.xml
+          filename: ${{ matrix.subproject }}/cobertura.xml
           badge: true
           fail_below_min: true
           format: markdown
