--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,7 @@ on:
 jobs:
 
   prepare:
+    name: detect modules
     runs-on: ubuntu-latest
     outputs:
       subprojects: ${{ steps.matrix.outputs.subprojects }}
@@ -50,7 +51,7 @@ jobs:
           echo "operators=$operators" >> $GITHUB_OUTPUT
 
   check-generated-changes:
-    name: Check generated code is up-to-date
+    name: verify generated files
     runs-on: ubuntu-latest
     needs: prepare
     strategy:
@@ -78,7 +79,7 @@ jobs:
         working-directory: ${{ matrix.subproject }}
 
 
-  test:
+  make-test:
     name: Run unit tests
     runs-on: ubuntu-latest
     needs: prepare
@@ -123,7 +124,7 @@ jobs:
             gocover-cobertura < cover.out > cobertura.xml
         working-directory: ${{ matrix.subproject }}
 
-      - name: Upload test log
+      - name: Upload go test log
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # pin@v4.6.2
         if: always()
         with:
@@ -131,8 +132,8 @@ jobs:
           path: ${{ matrix.subproject }}/gotest.log
           if-no-files-found: error
 
-      - id: upload-results
-        name: Upload test results
+      - id: Upload test reports
+        name: Upload test reports
         if: always()
         uses: actions/upload-artifact@v4
         with:
@@ -142,6 +143,7 @@ jobs:
             ${{ matrix.subproject }}/coverage.html
             ${{ matrix.subproject }}/cobertura.xml
             ${{ matrix.subproject }}/junit.xml
+
       - name: Publish test report
         uses: mikepenz/action-junit-report@v5
         if: always() && github.event_name == 'pull_request'
@@ -150,6 +152,7 @@ jobs:
           check_name: Test Report
           comment: true
           include_passed: true
+
       - name: Prepare coverage comment
         uses: irongut/CodeCoverageSummary@v1.3.0
         if: always() && github.event_name == 'pull_request'
@@ -161,11 +164,13 @@ jobs:
           indicators: true
           output: both
           thresholds: '60 80'
+
       - name: Append coverage comment
         if: always() && github.event_name == 'pull_request'
         run: |
           sudo chown $(whoami) code-coverage-results.md
           printf "\nDownload the latest HTML coverage report [here](${{ steps.upload-results.outputs.artifact-url }})." >> code-coverage-results.md
+
       - name: Add Coverage PR Comment
         uses: marocchino/sticky-pull-request-comment@v2
         if: always() && github.event_name == 'pull_request'
@@ -173,10 +178,10 @@ jobs:
           recreate: true
           path: code-coverage-results.md
           
-  build-operators:
+  build-push-operator-image:
     name: Build operators
     runs-on: ubuntu-latest
-    needs: [prepare, test]
+    needs: [prepare, make-test]
     outputs:
       image-digest: ${{ steps.build-operators.outputs.digest }}
       image-tag: ${{ steps.build-operators.outputs.image-digest }}
