--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -215,5 +215,21 @@ jobs:
           KO_DOCKER_REPO: ghcr.io/telekom/controlplane-mono/${{ matrix.subproject }}
         working-directory: ${{ matrix.subproject }}
 
+  scan-operator-image:
+    name: Scan operator image
+    runs-on: ubuntu-latest
+    needs:
+      - build-push-operator-image
+    steps:
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@0.28.0
+        env:
+          TRIVY_USERNAME: ${{ secrets.GITHUB_ACTOR }}
+          TRIVY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          image-ref: 'ghcr.io/${{ github.repository }}@${{ needs.build-push-operator-image.outputs.image-digest }}'
+          exit-code: '1'
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
 
 # TODO: build other subprojects
