--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -132,8 +132,7 @@ jobs:
           path: ${{ matrix.subproject }}/gotest.log
           if-no-files-found: error
 
-      - id: Upload test reports
-        name: Upload test reports
+      - name: Upload test reports
         if: always()
         uses: actions/upload-artifact@v4
         with:
